tests/semantic_errors/andrei4_4.tl
require "ifj21"

function main()
    local id : nil = 12
end

main()
